force-app/main/default/objects/Notification__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN11052020-Created for case 11471</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>