force-app/main/default/objects/Notification__c/fields/CertificateRequest__c.field-meta.xml
<CustomField>
    <fullName>CertificateRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to be created for the notification record creation in Certificate Request</description>
    <label>Certificate Request</label>
    <referenceTo>CertificateRequest__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>