force-app/main/default/objects/Notification__c/fields/DocGeneratorSettings__c.field-meta.xml
<CustomField>
    <fullName>DocGeneratorSettings__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Doc Generator Settings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>