force-app/main/default/objects/Notification__c/fields/DocumentTemplateName__c.field-meta.xml
<CustomField>
    <fullName>DocumentTemplateName__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Document Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>