force-app/main/default/objects/Notification__c/fields/DownloadDocumentHref__c.field-meta.xml
<CustomField>
    <fullName>DownloadDocumentHref__c</fullName>
    <label>Download Document Href</label>
    <length>255</length>
    <type>Text</type>
</CustomField>