force-app/main/default/objects/Notification__c/fields/FailedReason__c.field-meta.xml
<CustomField>
    <fullName>FailedReason__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Failed Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>