force-app/main/default/objects/Notification__c/fields/Fire__c.field-meta.xml
<CustomField>
    <fullName>Fire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to run the doc generator process.
PacPoint: AZ00008158PVL2</description>
    <label>Fire</label>
    <type>Checkbox</type>
</CustomField>