force-app/main/default/objects/Notification__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>