force-app/main/default/objects/Notification__c/fields/LicenseType__c.field-meta.xml
<CustomField>
    <fullName>LicenseType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PACIFICPOINT-AZ20200902 case 00009192</description>
    <label>License Type</label>
    <referenceTo>LicenseType__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>