force-app/main/default/objects/Notification__c/fields/MailedByAttestation__c.field-meta.xml
<CustomField>
    <fullName>MailedByAttestation__c</fullName>
    <label>Mailed By Attestation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>