force-app/main/default/objects/Notification__c/fields/MailedOnDate__c.field-meta.xml
<CustomField>
    <fullName>MailedOnDate__c</fullName>
    <label>Mailed On Date</label>
    <type>DateTime</type>
</CustomField>