force-app/main/default/objects/Notification__c/fields/NotificationReason__c.field-meta.xml
<CustomField>
    <fullName>NotificationReason__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Notification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Expiration</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>