force-app/main/default/objects/Notification__c/fields/PrintOrder__c.field-meta.xml
<CustomField>
    <fullName>PrintOrder__c</fullName>
    <label>Print Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>