force-app/main/default/objects/Notification__c/fields/PrintStatus__c.field-meta.xml
<CustomField>
    <fullName>PrintStatus__c</fullName>
    <description>Used to represent the ready for print status.</description>
    <label>Print Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Print</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>