force-app/main/default/objects/Notification__c/fields/RecipientEmail__c.field-meta.xml
<CustomField>
    <fullName>RecipientEmail__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>