force-app/main/default/objects/Notification__c/fields/RecipientName__c.field-meta.xml
<CustomField>
    <fullName>RecipientName__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>