force-app/main/default/objects/Notification__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>