force-app/main/default/objects/Notification__c/fields/RunBatchUpdateToLicense__c.field-meta.xml
<CustomField>
    <fullName>RunBatchUpdateToLicense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PACIFICPoint-AZ20200902 case 00009192</description>
    <label>Run Batch Update To License</label>
    <type>Checkbox</type>
</CustomField>