force-app/main/default/objects/Notification__c/fields/SaveRecordId__c.field-meta.xml
<CustomField>
    <fullName>SaveRecordId__c</fullName>
    <label>Save Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>