force-app/main/default/objects/Notification__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>