force-app/main/default/objects/Notification__c/fields/ScheduledJobBatch__c.field-meta.xml
<CustomField>
    <fullName>ScheduledJobBatch__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Scheduled Job Batch #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>