force-app/main/default/objects/Notification__c/fields/ScheduledTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledTime__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Scheduled Time</label>
    <type>DateTime</type>
</CustomField>