force-app/main/default/objects/Notification__c/fields/ScheduleForPrint__c.field-meta.xml
<CustomField>
    <fullName>ScheduleForPrint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to find if it is scheduled for print.
PAC-AZ06152020-00008511</description>
    <label>Schedule for print</label>
    <type>Checkbox</type>
</CustomField>