force-app/main/default/objects/Notification__c/fields/SendEmailtoLicensee__c.field-meta.xml
<CustomField>
    <fullName>SendEmailtoLicensee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email to Licensee</label>
    <type>Checkbox</type>
</CustomField>