force-app/main/default/objects/Notification__c/fields/SendtoPrinter__c.field-meta.xml
<CustomField>
    <fullName>SendtoPrinter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN07132020 - Created for PVL Phase 1 Sprint 6</description>
    <label>Send to Printer</label>
    <type>Checkbox</type>
</CustomField>