force-app/main/default/objects/Notification__c/fields/TimeDelivered__c.field-meta.xml
<CustomField>
    <fullName>TimeDelivered__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Time Delivered</label>
    <type>DateTime</type>
</CustomField>