force-app/main/default/objects/Notification__c/fields/TimeSent__c.field-meta.xml
<CustomField>
    <fullName>TimeSent__c</fullName>
    <description>PacPoint: AZ00008158PVL2</description>
    <label>Time Sent</label>
    <type>DateTime</type>
</CustomField>