force-app/main/default/objects/Notification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent Print</fullName>
            </value>
            <value>
                <fullName>Child Print</fullName>
            </value>
            <value>
                <fullName>Email CLM</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>