force-app/main/default/objects/Notification__c/fields/VFPage__c.field-meta.xml
<CustomField>
    <fullName>VFPage__c</fullName>
    <label>VF Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>